--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@heroui/react": "^2.8.7",
     "@tailwindcss/vite": "^4.1.18",
+    "axios": "^1.13.2",
     "framer-motion": "^12.27.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.12.0",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
