--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.13.2",
     "framer-motion": "^12.27.5",
     "react": "^19.2.0",
+    "react-cookie": "^8.0.1",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.12.0",
     "tailwindcss": "^4.1.18"
