--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@heroui/react": "^2.8.7",
+    "@internationalized/date": "^3.11.0",
+    "@react-aria/i18n": "^3.12.14",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.20",
     "axios": "^1.13.2",
